tests/programs/invalid/bitshift.java
public class A {
  public int m(int x) {
    return ((x << 2) >> 3) >>> 4;
  }
}   